CSS: fix line spacing

--- a/silicon/static/css/main.css
+++ b/silicon/static/css/main.css
@@ -10,6 +10,7 @@ html {
 
 body, html {
     overflow-x: hidden;
+    line-height: 1.4;
 }
 
 body {
